[gd_scene load_steps=4 format=2]

[ext_resource path="res://objectives/red_flag_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://objectives/Flag.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.12427, 4.08946 )

[node name="Flag" type="RigidBody2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="BaseDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseDetector"]
shape = SubResource( 1 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="area_entered" from="BaseDetector" to="." method="_on_BaseDetector_area_entered"]
[connection signal="area_exited" from="BaseDetector" to="." method="_on_BaseDetector_area_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
